<resources>
    <string name="title_home">Home</string>
    <string name="action_login">Login</string>
    <string name="text_idr_currency">Rp %1$s</string>
    <string name="plain_idr_currency">Mata Uang Rupiah</string>
    <string name="plain_username">Username</string>
    <string name="msg_success_login">login successful</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_close">Tutup</string>
    <string name="action_retry">Coba Lagi</string>
    <string name="action_yes">Ya</string>
    <string name="action_no">Tidak</string>
    <string name="action_choose_date">Pilih Tanggal</string>
    <string name="text_company_team_name">%1$s (%2$s)</string>
    <string name="image_general">general image</string>
    <string name="title_company_profile">Company Profile</string>
    <string name="plain_swipe_to_refresh">Swipe to refresh</string>
    <string name="plain_idr">IDR - </string>
    <string name="title_search">search</string>
    <string name="text_price_list_title">Price List %1$s</string>
    <string name="text_price_list_subtitle">Daftar harga %1$s</string>
    <string name="title_more_product_category">More Product</string>
    <string name="title_more_product_sub">Daftar produk lain</string>
    <string name="text_product_budget">Budget - %1$s</string>
    <string name="plain_facility_detail">Detail Fasilitas</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="text_product_portfolio_subtitle">Kumpulan foto %1$s</string>
    <string name="text_product_more_product_category_subtitle">Daftar harga %1$s</string>
    <string name="title_date">Date</string>
    <string name="plain_time">Time</string>
    <string name="title_location">Location</string>
    <string name="action_direction">Direction</string>
    <string name="title_upcoming_event">Upcoming Event</string>
    <string name="title_vendor_category_list">Daftar kategori vendor</string>
    <string name="plain_app_jargon">Bersama kami wujudkan impian</string>
    <string name="title_app_name">Feliz Organizer</string>
    <string name="plain_company_profile">Company Profile</string>
    <string name="title_our_product">Our Product</string>
    <string name="plain_our_services">Layanan jasa kami</string>
    <string name="hint_search">Search</string>
    <string name="text_vendor_list_title">%1$s Malang &amp; Batu</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_batalkan">Batalkan</string>
    <string name="plain_search_result">Hasil Pencarian</string>
    <string name="text_vendor_detail_more_vendor">More %1$s</string>
    <string name="text_more_vendor_subtitle">Temukan %1$s terbaik</string>
    <string name="title_product">Product</string>
    <string name="title_vendor">Vendor</string>
    <string name="title_finished_event">Finished Event</string>
    <string name="msg_empty_search">\"%1$s\"\ntidak ditemukan</string>
    <string name="title_location_wide">Luas lokasi</string>
    <string name="title_facility">Fasilitas</string>
    <string name="title_room">Ruangan</string>
    <string name="text_location_space">Luas lokasi: %1$s</string>
    <string name="text_capacity">Kapasitas: %1$s</string>
    <string name="text_room">Jumlah ruangan: %1$s</string>
    <string name="title_login">Login</string>
    <string name="title_login_sub">Silakan login menggunakan username dan password yang sudah diberikan oleh pihak Feliz Organizer</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_logout">Logout</string>
    <string name="title_client_personal_info">Informasi Pribadi Klien</string>
    <string name="title_client_fullname">Nama Lengkap Klien</string>
    <string name="hint_client_fullname">Nama Lengkap Klien</string>
    <string name="hint_note">Keterangan</string>
    <string name="title_spouse_fullname">Nama Lengkap Mempelai</string>
    <string name="title_groom_fullname">Nama Pria (beserta gelar)</string>
    <string name="title_bride_fullname">Nama Wanita (beserta gelar)</string>
    <string name="hint_groom_fullname">Nama Mempelai Pria (beserta gelar)</string>
    <string name="hint_bride_fullname">Nama Mempelai Wanita (beserta gelar)</string>
    <string name="title_groom_parent_name">Nama Orang Tua Mempelai Pria</string>
    <string name="title_father_name">Nama Ayah (beserta gelar)</string>
    <string name="title_mother_name">Nama Ibu (berserta gelar)</string>
    <string name="title_bride_parent_name">Nama Orang Tua Mempelai Wanita</string>
    <string name="hint_fullname">Nama Lengkap</string>
    <string name="title_bride_family_member_name">Nama Anggota Keluarga Mempelai Wanita</string>
    <string name="title_groom_family_member_name">Nama Anggota Keluarga Mempelai Pria</string>
    <string name="title_wedding_staff_list">Daftar Petugas Resepsi</string>
    <string name="title_family_coordinator">Koordinator Keluarga</string>
    <string name="title_phone_number_0xx">Nomor HP : 08XXXXXXXXXX</string>
    <string name="title_phone_number">Nomor HP</string>
    <string name="title_usher_coordinator">Koordinator Among Tamu</string>
    <string name="title_vip_coordinator">Koordinator Tamu VIP</string>
    <string name="title_present_coordinator">Koordinator Kunci Pundi dan Kado</string>
    <string name="title_souvenir_coordinator">Koordinator Souvenir</string>
    <string name="title_usher_staff">Petugas Among Tamu</string>
    <string name="title_guest_booking_staff">Petugas Pembukuan Tamu</string>
    <string name="title_marriage_contract_staff">Daftar Petugas Akad Nikah</string>
    <string name="title_quran_reader">Pembaca Al-Quran</string>
    <string name="title_best_man">Saksi Mempelai Pria</string>
    <string name="title_maid_of_honor">Saksi Mempelai Wanita</string>
    <string name="title_venue">Venue</string>
    <string name="hint_venue_name">Nama venue</string>
    <string name="title_decoration_vendor">Vendor Dekorasi</string>
    <string name="hint_vendor_name">Nama vendor</string>
    <string name="title_catering_vendor">Vendor Catering</string>
    <string name="title_makeup_vendor">Vendor Make Up</string>
    <string name="title_documentation_vendor">Vendor Dokumentasi</string>
    <string name="title_mc_name">Nama MC</string>
    <string name="hint_mc_name">Nama MC</string>
    <string name="title_wedding_dress_vendor">Vendor Baju Pengantin</string>
    <string name="title_spouse_accessories_vendor">Vendor Aksesoris Pengantin</string>
    <string name="title_staff_family_attire_vendor">Vendor Baju Panitia dan Keluarga</string>
    <string name="title_lighting_effect">Lighting Effect</string>
    <string name="title_event_support">Penunjang Event</string>
    <string name="hint_select_plan">Pilih paket</string>
    <string name="title_generator">Genset</string>
    <string name="title_sound_system">Sound System</string>
    <string name="title_multimedia">Mutimedia</string>
    <string name="title_spouse_car">Mobil Pengantin</string>
    <string name="hint_wedding_car_name">Nama Mobil</string>
    <string name="hint_user_service_select_plan">Pilih paket (jumlah usher)</string>
    <string name="title_invitation_typing">Pengetikan Nama Undangan</string>
    <string name="hint_invitation_typing_amount">Jumlah nama (@1000/nama)</string>
    <string name="title_courier">Kurir</string>
    <string name="hint_courier_amount">Jumlah kurir (1 hari @500.000/kurir)</string>
    <string name="title_other">Lain-lain</string>
    <string name="hint_other_note">Masukkan keterangan lainnya</string>
    <string name="title_statement_letter">Surat Pernyataan</string>
    <string name="plain_statement_letter_content">Dengan uraian data tersebut saya bertanggung jawab penuh mengawasi dan menerima hak dan kewajiban saya sebagai pemesan pada Feliz Organizer</string>
    <string name="plain_as_client">Sebagai Pemesan</string>
    <string name="plain_as_feliz_representative">Mewakili Feliz Organizer</string>
    <string name="action_previous">Sebelumnya</string>
    <string name="action_next">Selanjutnya</string>
    <string name="action_add_family_member">Tambah Anggota Keluarga</string>
    <string name="title_mc">MC Akad</string>
    <string name="title_tausyiah">Tausyiah</string>
    <string name="title_prayer">Doa</string>
    <string name="action_add_staff">Tambah Petugas</string>
    <string name="text_staff_number">Petugas %1$s</string>
    <string name="title_souvenir_staff">Petugas Souvenir</string>
    <string name="action_add_vendor">Tambah Vendor</string>
    <string name="text_vendor_number">Vendor %1$s</string>
    <string name="title_vendor_list">Daftar Vendor</string>
    <string name="title_usher_service">Jasa Usher</string>
    <string name="title_mc_vendor">MC Acara</string>
    <string name="title_note">Keterangan</string>
    <string name="title_family_member">Nama Anggota Keluarga</string>
    <string name="title_coordinator_name">Nama Koordinator</string>
    <string name="title_fullname">Nama Lengkap</string>
    <string name="text_vendor_name">Nama Vendor</string>
    <string name="title_lighting_plan">Paket Lighting</string>
    <string name="title_sound_system_plan">Ukuran (Watt)</string>
    <string name="title_generator_plan">Ukuran (KVA)</string>
    <string name="title_multimedia_plan">Jenis</string>
    <string name="title_wedding_car_plan">Jenis Mobil Pengantin</string>
    <string name="title_usher_service_plan">Jumlah Usher</string>
    <string name="title_invitation_typing_plan">Jumlah Nama Undangan (@1000/nama)</string>
    <string name="title_courier_plan">Jumlah Kurir (1 hari @500.000/kurir)</string>
    <string name="title_other_note">Keterangan lain</string>
    <string name="title_venue_name">Nama Venue</string>
    <string name="title_form">Formulir</string>
    <string name="title_edit">Edit</string>
    <string name="menu_logout">Logout</string>
    <string name="title_personal_data">Data Pribadi</string>
    <string name="title_statement">Pernyataan</string>
    <string name="plain_feliz_organizer">Feliz Organizer</string>
    <string name="title_vision">Visi</string>
    <string name="title_mission">Misi</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_instagram">Instagram</string>
    <string name="title_whatsapp">WhatsApp</string>
    <string name="title_youtube">YouTube</string>
    <string name="title_email">Email</string>
    <string name="title_our_team">Our Team</string>
    <string name="plain_view_more">view more</string>
    <string name="title_staff_name">Nama Staff</string>
    <string name="title_edit_form">Edit Formulir</string>
    <string name="title_entertain_vendor">Vendor Entertain</string>
    <string name="title_upcoming_event_subtitle">Event terdekat yang akan dikerjakan</string>
    <string name="title_finished_event_subtitle">Event yang sudah selesai</string>
    <string name="title_home_decoration"><![CDATA[Decoration in Malang & Batu]]></string>
    <string name="title_home_decoration_subtitle">Daftar vendor dekorasi</string>
    <string name="title_home_photography"><![CDATA[Photographer in Malang & Batu]]></string>
    <string name="title_home_photography_subtitle">Daftar vendor fotografi</string>
    <string name="title_home_lighting"><![CDATA[Lighting & Decoration]]></string>
    <string name="title_home_lighting_subtitle"><![CDATA[Daftar vendor pencahayaan & dekorasi]]></string>
    <string name="title_home_sound_subtitle">Daftar vendor sound system</string>
    <string name="title_home_makeup"><![CDATA[Make Up & Dress]]></string>
    <string name="title_home_makeup_subtitle"><![CDATA[Daftar vendor make up & dress]]></string>
    <string name="title_home_vendor_category_subtitle">Daftar vendor %s</string>
    <string name="text_more_portfolio_title">More Event</string>
    <string name="text_more_portfolio_desc">Event lain yang akan dikerjakan</string>
</resources>