<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:textAppearance="@style/TextAppearance.FelizApps.Body"
            tools:text="@string/text_vendor_number" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/text_vendor_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:textAppearance="@style/TextAppearance.FelizApps.Body"
            tools:text="Interim" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/title_note" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:ellipsize="end"
            android:maxLines="5"
            android:textAppearance="@style/TextAppearance.FelizApps.Body"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>
</layout>