<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.feliz.apps.presentation.ui.form.edit.FormEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_large"
        android:paddingVertical="@dimen/margin_medium"
        tools:context=".presentation.ui.form.edit.staff.prayer.EditPrayerFragment">

        <!--      Marriage Contract Staff      -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_marriage_contract_staff_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/title_marriage_contract_staff"
            android:textAllCaps="true" />

        <!--      Tausyiah      -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_tausyiah_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/title_tausyiah"
            android:textAppearance="@style/TextAppearance.FelizApps.Headline4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_tausyiah_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_tausyiah_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fullname"
                android:inputType="textPersonName"
                android:text="@={viewModel.tausyiahObservable}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--      Prayer      -->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_prayer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/title_prayer"
            android:textAppearance="@style/TextAppearance.FelizApps.Headline4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_prayer_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_prayer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fullname"
                android:inputType="textPersonName"
                android:text="@={viewModel.prayerObservable}" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>